{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 11,
  "lineage": "b74f9318-2588-9013-a709-7980659152c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phrasal_verbs_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ac7c48e82e50939b",
            "arn": "arn:aws:ec2:eu-west-2:281712468499:instance/i-0768013f4d9208466",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0768013f4d9208466",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "phrasal-verbs-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0134adf21e77d5691"
              }
            ],
            "primary_network_interface_id": "eni-0134adf21e77d5691",
            "private_dns": "ip-10-0-1-115.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.115",
            "public_ip": "3.9.172.21",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e90042c5d37037a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db030dd1b00a79bd",
            "tags": {
              "Name": "phrasal-verbs-server"
            },
            "tags_all": {
              "Name": "phrasal-verbs-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09511b112129d9201"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "281712468499",
            "id": "i-0768013f4d9208466",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:281712468499:internet-gateway/igw-0e320f2a8cd24f17f",
            "id": "igw-0e320f2a8cd24f17f",
            "owner_id": "281712468499",
            "region": "eu-west-2",
            "tags": {
              "Name": "phrasal-verbs-igw"
            },
            "tags_all": {
              "Name": "phrasal-verbs-igw"
            },
            "vpc_id": "vpc-03b1e6a2e9fc267c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "281712468499",
            "id": "igw-0e320f2a8cd24f17f",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:281712468499:route-table/rtb-0eef9d881b11ecf30",
            "id": "rtb-0eef9d881b11ecf30",
            "owner_id": "281712468499",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e320f2a8cd24f17f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "phrasal-verbs-public-rt"
            },
            "tags_all": {
              "Name": "phrasal-verbs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b1e6a2e9fc267c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "281712468499",
            "id": "rtb-0eef9d881b11ecf30",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01617f41ad7bc792c",
            "region": "eu-west-2",
            "route_table_id": "rtb-0eef9d881b11ecf30",
            "subnet_id": "subnet-0db030dd1b00a79bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "281712468499",
            "id": "rtbassoc-01617f41ad7bc792c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:281712468499:security-group/sg-09511b112129d9201",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09511b112129d9201",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "86.29.160.245/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "phrasal-verbs-sg",
            "name_prefix": "",
            "owner_id": "281712468499",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "phrasal-verbs-sg"
            },
            "tags_all": {
              "Name": "phrasal-verbs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b1e6a2e9fc267c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "281712468499",
            "id": "sg-09511b112129d9201",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:281712468499:subnet/subnet-0db030dd1b00a79bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db030dd1b00a79bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "281712468499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "phrasal-verbs-public-subnet"
            },
            "tags_all": {
              "Name": "phrasal-verbs-public-subnet"
            },
            "vpc_id": "vpc-03b1e6a2e9fc267c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "281712468499",
            "id": "subnet-0db030dd1b00a79bd",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:281712468499:vpc/vpc-03b1e6a2e9fc267c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca210c2ff9bc17e6",
            "default_route_table_id": "rtb-0cc065f82d10e1b9c",
            "default_security_group_id": "sg-0b168c8b45a6ba83b",
            "dhcp_options_id": "dopt-0d1043b1dfba35cce",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b1e6a2e9fc267c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc065f82d10e1b9c",
            "owner_id": "281712468499",
            "region": "eu-west-2",
            "tags": {
              "Name": "phrasal-verbs-vpc"
            },
            "tags_all": {
              "Name": "phrasal-verbs-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "281712468499",
            "id": "vpc-03b1e6a2e9fc267c8",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}